[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Ubuntu_Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Ubuntu.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Scenes/diskalimer.gd" type="Script" id=3]
[ext_resource path="res://Sprites/cr_warn.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 23
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -8.12244
margin_bottom = -0.122437
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="CanvasLayer/Control"]
anchor_right = 1.0
margin_top = 34.0
margin_right = -1.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "WARNING!"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningText" type="Label" parent="CanvasLayer/Control"]
anchor_left = 0.016
anchor_top = 0.218
anchor_right = 0.971
anchor_bottom = 0.451
margin_left = 13.52
margin_top = 0.0400085
margin_right = 0.119873
margin_bottom = 0.279968
custom_fonts/font = SubResource( 2 )
text = "Данный видеоигровой \"шедевр\" мирового класса строго не рекомендуется детям, нежным личностям, лоу скилл лохам, изичам, анимешникам, фурриебам, хейтерам WheatleyHDD, анонимусам, адептам, фанатикам и сектантам. А еще тут матерятся (но мы запикали), не заходи сюда"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="Button" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -103.001
margin_right = 102.0
margin_bottom = -37.0
custom_fonts/font = SubResource( 3 )
text = "Понял"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.1082
margin_top = -28.3989
margin_right = -14.1082
margin_bottom = -9.39886
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Control/SubmitButton" to="." method="_on_SubmitButton_pressed"]
